# DocVision

./: README.md  license.txt  pyproject.toml
docvision/: hooks.py  modules.txt
docvision/docvision/: api.py
docvision/docvision/doctype/docvision_settings/: docvision_settings.js  docvision_settings.json  docvision_settings.py  test_docvision_settings.py
docvision/public/js/: vision_contact.js  vision_customer.js  vision_lead.js  vision_supplier.js
docvision/setup/: install.py
